--- a/relatedpost.html
+++ b/relatedpost.html
@@ -30,7 +30,8 @@
         line-height: 1em;
         width: 120px;
         border: 1px solid #d7d7d7;
-        padding: 10px 0;
+        padding: 0;
+       border-radius:5px;
       overflow:hidden;
     }
     
@@ -67,7 +68,7 @@
         margin-bottom: 5px;
       font-weight:400;
     }
-  p{padding:10px}
+  p{margin:0 10px 10px}
     
     @media only screen and (max-width:600px) {
         span.news-text {
