--- a/relatedpost.html
+++ b/relatedpost.html
@@ -13,9 +13,7 @@
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,Roboto,"Segoe UI",Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     height: 210px;
-    width:100%;
-    max-width: 810px;
-    min-width: 540px;
+    width:810px;
   }
     
     body li,
