--- a/relatedpost.html
+++ b/relatedpost.html
@@ -32,6 +32,7 @@
         width: 150px;
         border: 1px solid #d7d7d7;
         padding: 0;
+        height: fit-content;
        border-radius:5px;
       overflow:hidden;
     }
@@ -68,7 +69,7 @@
         font-size: 11px;
         margin-bottom: 5px;
     }
-  .linkjudul{10px 10px}
+  .linkjudul{margin:110px 10px 10px}
     
     @media only screen and (max-width:600px) {
         span.news-text {
